--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -55,11 +55,11 @@
                   <span class="platform-count">Stazione Ferroviaria</span>
                 </div>
               </div>
-              <div class="station-status">
+              <!-- <div class="station-status">
                 <span class="status-badge status-active">
                   Attiva
                 </span>
-              </div>
+              </div> -->
             </div>
           } @empty {
             <div class="no-results">
