--- a/src/app/components/station-detail/station-detail.component.html
+++ b/src/app/components/station-detail/station-detail.component.html
@@ -2,9 +2,9 @@
   <div class="station-header">
     <div class="station-title">
       <h1>{{ station().stop_name }}</h1>
-      <span class="status-badge status-active">
+      <!-- <span class="status-badge status-active">
         Attiva
-      </span>
+      </span> -->
     </div>
     <div class="station-meta">
       <div class="meta-item">
